Update wallet connect, make ui more generic for non crowdspot dapps.

--- a/package.json
+++ b/package.json
@@ -73,9 +73,9 @@
     "@solana/spl-token": "0.3.5",
     "@solana/web3.js": "1.64.0",
     "@tradle/react-native-http": "2.0.1",
-    "@walletconnect/react-native-compat": "2.0.0-rc.2",
-    "@walletconnect/sign-client": "2.0.0-rc.2",
-    "@walletconnect/types": "2.0.0-rc.2",
+    "@walletconnect/react-native-compat": "2.1.4",
+    "@walletconnect/sign-client": "2.1.4",
+    "@walletconnect/types": "2.1.4",
     "angry-purple-tiger": "1.0.5",
     "apollo3-cache-persist": "0.13.0",
     "assert": "1.5.0",
@@ -156,7 +156,7 @@
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-sodium": "0.4.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "13.6.0",
     "react-native-tcp": "3.3.2",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
