--- a/package.json
+++ b/package.json
@@ -43,21 +43,21 @@
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "^4.8.1",
-    "@helium/distributor-oracle": "0.0.5",
+    "@helium/distributor-oracle": "^0.0.10",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.0.5",
-    "@helium/lazy-distributor-sdk": "0.0.5",
+    "@helium/idls": "0.0.9",
+    "@helium/lazy-distributor-sdk": "0.0.9",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "0.0.5",
+    "@helium/spl-utils": "0.0.9",
     "@helium/transactions": "4.7.5",
     "@helium/wallet-link": "4.8.1",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
     "@metaplex-foundation/js": "0.17.6",
-    "@project-serum/anchor": "0.25.0",
+    "@project-serum/anchor": "0.26.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.12",
