Refactor account screen

--- a/package.json
+++ b/package.json
@@ -52,18 +52,18 @@
     "@helium/react-native-sdk": "1.0.0",
     "@helium/spl-utils": "0.0.5",
     "@helium/transactions": "4.7.5",
-    "@ledgerhq/hw-app-helium": "6.29.1",
     "@helium/wallet-link": "4.8.1",
+    "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
-    "@react-native-async-storage/async-storage": "1.17.11",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
-    "@react-native-community/netinfo": "9.3.5",
     "@metaplex-foundation/js": "0.17.6",
     "@project-serum/anchor": "0.25.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.12",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
+    "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/native": "6.0.11",
     "@react-navigation/native-stack": "6.7.0",
@@ -158,6 +158,7 @@
     "react-native-sodium": "0.4.0",
     "react-native-svg": "13.6.0",
     "react-native-tcp": "3.3.2",
+    "react-native-text-ticker": "^1.14.0",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
     "react-redux": "8.0.4",
