--- a/package.json
+++ b/package.json
@@ -43,20 +43,21 @@
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "^4.8.1",
-    "@helium/distributor-oracle": "^0.0.10",
+    "@helium/distributor-oracle": "^0.0.11",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.0.9",
-    "@helium/lazy-distributor-sdk": "0.0.9",
+    "@helium/idls": "0.0.11",
+    "@helium/lazy-distributor-sdk": "0.0.11",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "0.0.9",
-    "@helium/transactions": "4.7.5",
+    "@helium/spl-utils": "0.0.11",
+    "@helium/transactions": "^4.8.1",
     "@helium/wallet-link": "4.8.1",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
-    "@metaplex-foundation/js": "0.17.6",
+    "@metaplex-foundation/js": "^0.17.12",
+    "@metaplex-foundation/mpl-bubblegum": "^0.6.0",
     "@project-serum/anchor": "0.26.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "4.3.0",
@@ -65,11 +66,13 @@
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "6.4.0",
+    "@react-navigation/material-top-tabs": "^6.5.1",
     "@react-navigation/native": "6.0.11",
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.8.6",
     "@shopify/restyle": "1.8.0",
+    "@solana/spl-account-compression": "^0.1.4",
     "@solana/spl-token": "0.3.5",
     "@solana/web3.js": "1.64.0",
     "@tradle/react-native-http": "2.0.1",
@@ -146,6 +149,7 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "4.4.1",
     "react-native-os": "1.2.6",
+    "react-native-pager-view": "^6.1.2",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "2.12.0",
@@ -157,6 +161,7 @@
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-sodium": "0.4.0",
     "react-native-svg": "13.6.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-text-ticker": "^1.14.0",
     "react-native-udp": "2.7.0",
