--- a/package.json
+++ b/package.json
@@ -42,22 +42,23 @@
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency": "^4.8.1",
-    "@helium/distributor-oracle": "0.0.5",
+    "@helium/currency": "4.8.1",
+    "@helium/distributor-oracle": "0.0.11",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.0.5",
-    "@helium/lazy-distributor-sdk": "0.0.5",
+    "@helium/idls": "0.0.11",
+    "@helium/lazy-distributor-sdk": "0.0.11",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "0.0.5",
+    "@helium/spl-utils": "0.0.11",
     "@helium/transactions": "4.7.5",
     "@helium/wallet-link": "4.8.1",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
-    "@metaplex-foundation/js": "0.17.6",
-    "@project-serum/anchor": "0.25.0",
+    "@metaplex-foundation/js": "0.17.12",
+    "@metaplex-foundation/mpl-bubblegum": "0.6.0",
+    "@project-serum/anchor": "0.26.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.12",
@@ -65,11 +66,13 @@
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "6.4.0",
+    "@react-navigation/material-top-tabs": "6.5.1",
     "@react-navigation/native": "6.0.11",
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.8.6",
     "@shopify/restyle": "1.8.0",
+    "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-token": "0.3.5",
     "@solana/web3.js": "1.64.0",
     "@tradle/react-native-http": "2.0.1",
@@ -146,6 +149,7 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "4.4.1",
     "react-native-os": "1.2.6",
+    "react-native-pager-view": "6.1.2",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "2.12.0",
@@ -157,8 +161,9 @@
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-sodium": "0.4.0",
     "react-native-svg": "13.6.0",
+    "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
-    "react-native-text-ticker": "^1.14.0",
+    "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
     "react-redux": "8.0.4",
@@ -171,7 +176,7 @@
     "stream": "0.0.2",
     "stream-browserify": "1.0.0",
     "string_decoder": "0.10.31",
-    "text-encoding-polyfill": "^0.6.7",
+    "text-encoding-polyfill": "0.6.7",
     "timers-browserify": "1.4.2",
     "tinycolor2": "1.4.2",
     "tty-browserify": "0.0.0",
@@ -181,14 +186,14 @@
   },
   "devDependencies": {
     "@apollo/rover": "0.7.0",
-    "@babel/core": "^7.19.3",
+    "@babel/core": "7.19.3",
     "@babel/runtime": "7.18.9",
     "@graphql-codegen/cli": "2.3.0",
     "@graphql-codegen/typescript": "2.4.1",
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.2.2",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
-    "@types/bn.js": "^5.1.1",
+    "@types/bn.js": "5.1.1",
     "@types/graphql": "14.5.0",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
@@ -201,7 +206,7 @@
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
     "@types/react-test-renderer": "17.0.2",
-    "@types/semver": "^7.3.12",
+    "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
