--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   },
   "dependencies": {
     "@apollo/client": "3.5.10",
+    "@coral-xyz/borsh": "^0.26.0",
     "@gorhom/bottom-sheet": "4.4.3",
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "4.8.1",
     "@helium/distributor-oracle": "0.0.11",
+    "@helium/helium-react-hooks": "0.0.11",
     "@helium/http": "4.7.5",
     "@helium/idls": "0.0.11",
     "@helium/lazy-distributor-sdk": "0.0.11",
@@ -52,6 +54,7 @@
     "@helium/react-native-sdk": "1.0.0",
     "@helium/spl-utils": "0.0.11",
     "@helium/transactions": "4.7.5",
+    "@helium/treasury-management-sdk": "^0.0.13",
     "@helium/wallet-link": "4.8.1",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
