Fix top nav and dep issue

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
-    "@metaplex-foundation/js": "0.17.12",
+    "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@project-serum/anchor": "0.26.0",
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -101,12 +101,12 @@
     "domain-browser": "1.2.0",
     "events": "3.3.0",
     "expo": "47.0.6",
-    "expo-asset": "8.7.0",
-    "expo-barcode-scanner": "12.1.0",
-    "expo-camera": "13.1.0",
+    "expo-asset": "8.6.2",
+    "expo-barcode-scanner": "12.0.0",
+    "expo-camera": "13.0.0",
     "expo-constants": "14.0.2",
     "expo-haptics": "12.0.1",
-    "expo-linking": "3.3.0",
+    "expo-linking": "3.2.3",
     "expo-local-authentication": "13.0.2",
     "expo-permissions": "14.0.0",
     "expo-secure-store": "12.0.0",
@@ -137,8 +137,8 @@
     "react-native-currency-format": "1.0.19",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-get-random-values": "~1.8.0",
+    "react-native-gesture-handler": "2.8.0",
+    "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
