--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "dependencies": {
     "@apollo/client": "3.5.10",
     "@coral-xyz/anchor": "0.26.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@gorhom/bottom-sheet": "4.4.3",
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
@@ -170,6 +172,7 @@
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
+    "react-native-webview": "^11.26.0",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
