--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@coral-xyz/anchor": "0.26.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@expo/browser-polyfill": "^1.0.0",
+    "@flyskywhy/react-native-browser-polyfill": "^2.0.0",
     "@gorhom/bottom-sheet": "4.4.3",
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
@@ -106,6 +108,7 @@
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
     "events": "3.3.0",
+    "events-polyfill": "^2.1.2",
     "expo": "47.0.6",
     "expo-asset": "8.6.2",
     "expo-barcode-scanner": "12.0.0",
@@ -156,6 +159,7 @@
     "react-native-onesignal": "4.4.1",
     "react-native-os": "1.2.6",
     "react-native-pager-view": "6.0.1",
+    "react-native-polyfill-globals": "^3.1.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "2.12.0",
@@ -173,6 +177,7 @@
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
     "react-native-webview": "^11.26.0",
+    "react-native-webview-bridge-seamless": "^0.0.15",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
