--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   },
   "dependencies": {
     "@apollo/client": "3.5.10",
-    "@coral-xyz/borsh": "^0.26.0",
     "@gorhom/bottom-sheet": "4.4.3",
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
@@ -54,7 +53,7 @@
     "@helium/react-native-sdk": "1.0.0",
     "@helium/spl-utils": "0.0.11",
     "@helium/transactions": "4.7.5",
-    "@helium/treasury-management-sdk": "^0.0.13",
+    "@helium/treasury-management-sdk": "0.0.13",
     "@helium/wallet-link": "4.8.1",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
@@ -236,6 +235,8 @@
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
     "react-test-renderer": "17.0.2",
+    "reactotron-react-native": "5.0.3",
+    "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
     "typescript": "4.6.3"
   },
