--- a/ios/HeliumWallet/HeliumWallet.entitlements
+++ b/ios/HeliumWallet/HeliumWallet.entitlements
@@ -14,8 +14,8 @@
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.helium.wallet.app.onesignal</string>
-		<string>group.com.helium.mobile.wallet.widget</string>
+		<string>group.com.dannpl.wallet.app.onesignal</string>
+		<string>group.com.dannpl.mobile.wallet.widget</string>
 	</array>
 </dict>
 </plist>
