--- a/ios/HeliumWalletWidget/HeliumWalletWidgetExtension.entitlements
+++ b/ios/HeliumWalletWidget/HeliumWalletWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.dannpl.mobile.wallet.widget</string>
+		<string>group.com.helium.mobile.wallet.widget</string>
 	</array>
 </dict>
 </plist>
