--- a/package.json
+++ b/package.json
@@ -42,25 +42,25 @@
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency": "4.8.1",
-    "@helium/distributor-oracle": "0.0.11",
-    "@helium/helium-react-hooks": "0.0.11",
+    "@helium/currency": "4.9.0",
+    "@helium/distributor-oracle": "0.0.26",
+    "@helium/helium-react-hooks": "0.0.26",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.0.11",
-    "@helium/lazy-distributor-sdk": "0.0.11",
+    "@helium/idls": "0.0.26",
+    "@helium/lazy-distributor-sdk": "0.0.26",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "0.0.11",
+    "@helium/spl-utils": "0.0.26",
     "@helium/transactions": "4.7.5",
-    "@helium/treasury-management-sdk": "0.0.13",
+    "@helium/treasury-management-sdk": "0.0.26",
     "@helium/wallet-link": "4.8.1",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
     "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
-    "@project-serum/anchor": "0.26.0",
+    "@coral-xyz/anchor": "0.26.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.12",
