--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "apollo3-cache-persist": "0.13.0",
     "assert": "1.5.0",
     "asyncstorage-down": "4.2.0",
-    "axios": "1.2.0",
+    "axios": "^1.3.2",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.0",
