Add hotspot list and expanded view

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "4.9.0",
-    "@helium/distributor-oracle": "0.0.32",
+    "@helium/distributor-oracle": "^0.0.33",
     "@helium/helium-entity-manager-sdk": "0.0.32",
     "@helium/helium-react-hooks": "0.0.32",
     "@helium/helium-sub-daos-sdk": "0.0.32",
