--- a/package.json
+++ b/package.json
@@ -44,19 +44,19 @@
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "4.9.0",
-    "@helium/distributor-oracle": "0.0.35",
-    "@helium/helium-entity-manager-sdk": "0.0.35",
-    "@helium/helium-react-hooks": "0.0.35",
-    "@helium/helium-sub-daos-sdk": "0.0.35",
+    "@helium/distributor-oracle": "^0.0.36",
+    "@helium/helium-entity-manager-sdk": "0.0.36",
+    "@helium/helium-react-hooks": "0.0.36",
+    "@helium/helium-sub-daos-sdk": "0.0.36",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.0.35",
-    "@helium/lazy-distributor-sdk": "0.0.35",
+    "@helium/idls": "0.0.36",
+    "@helium/lazy-distributor-sdk": "0.0.36",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "0.0.35",
+    "@helium/spl-utils": "0.0.36",
     "@helium/transactions": "4.7.5",
-    "@helium/treasury-management-sdk": "0.0.35",
+    "@helium/treasury-management-sdk": "0.0.36",
     "@helium/wallet-link": "4.8.1",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
