--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
   },
   "dependencies": {
     "@apollo/client": "3.5.10",
+    "@coral-xyz/anchor": "0.26.0",
     "@gorhom/bottom-sheet": "4.4.3",
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/data-credits-sdk": "0.0.27",
-    "@helium/helium-sub-daos-sdk": "0.0.27",
     "@helium/currency": "4.9.0",
+    "@helium/data-credits-sdk": "^0.0.41",
     "@helium/distributor-oracle": "0.0.26",
     "@helium/helium-react-hooks": "0.0.26",
+    "@helium/helium-sub-daos-sdk": "^0.0.41",
     "@helium/http": "4.7.5",
     "@helium/idls": "0.0.26",
     "@helium/lazy-distributor-sdk": "0.0.26",
@@ -62,7 +63,6 @@
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
     "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
-    "@coral-xyz/anchor": "0.26.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.12",
