--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "file:.yalc/@helium/spl-utils",
+    "@helium/spl-utils": "0.0.40",
     "@helium/transactions": "4.7.5",
     "@helium/treasury-management-sdk": "0.0.40",
     "@helium/wallet-link": "4.8.1",
@@ -87,10 +87,10 @@
     "apollo3-cache-persist": "0.13.0",
     "assert": "1.5.0",
     "asyncstorage-down": "4.2.0",
-    "axios": "^1.3.2",
+    "axios": "1.3.2",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
-    "bignumber.js": "9.1.0",
+    "bignumber.js": "9.1.1",
     "bn.js": "5.2.1",
     "browserify-zlib": "0.1.4",
     "bs58": "5.0.0",
