feat: received DC

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "4.9.0",
-    "@helium/data-credits-sdk": "0.0.41",
+    "@helium/data-credits-sdk": "^0.0.42",
     "@helium/distributor-oracle": "0.0.41",
     "@helium/helium-entity-manager-sdk": "0.0.41",
     "@helium/helium-react-hooks": "0.0.41",
