Fix pre migration bugs & add airdrop screen for devnet

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
-    "lib": ["es2021"],
+    "lib": [
+      "es2021"
+    ],
     "allowJs": true,
     "jsx": "react-native",
     "noEmit": true,
@@ -15,16 +17,33 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "paths": {
-      // This needs to be mirrored in babel.config.js
-      "@helium/crypto": ["./node_modules/@helium/crypto-react-native"],
-      "@assets": ["./src/assets"],
-      "@components/*": ["./src/components/*"],
-      "@constants/*": ["./src/constants/*"],
-      "@hooks/*": ["./src/hooks/*"],
-      "@theme/*": ["./src/theme/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@storage/*": ["./src/storage/*"],
-      "@types/*": ["./src/types/*"]
+      "@helium/crypto": [
+        "./node_modules/@helium/crypto-react-native"
+      ],
+      "@assets": [
+        "./src/assets"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@constants/*": [
+        "./src/constants/*"
+      ],
+      "@hooks/*": [
+        "./src/hooks/*"
+      ],
+      "@theme/*": [
+        "./src/theme/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
+      ],
+      "@storage/*": [
+        "./src/storage/*"
+      ],
+      "@types/*": [
+        "./src/types/*"
+      ]
     }
   },
   "exclude": [
@@ -33,5 +52,6 @@
     "metro.config.js",
     "jest.config.js",
     "src/graphql/__generated__/*.ts"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
