--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.5.10",
+    "@babel/preset-typescript": "^7.21.0",
     "@coral-xyz/anchor": "0.26.0",
     "@gorhom/bottom-sheet": "4.4.3",
     "@gorhom/portal": "1.0.14",
@@ -157,7 +158,7 @@
     "react-native-pager-view": "6.0.1",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.12.0",
+    "react-native-reanimated": "2.3.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.0",
     "react-native-share": "7.9.0",
