--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
   },
   "dependencies": {
     "@apollo/client": "3.5.10",
-    "@babel/preset-typescript": "^7.21.0",
+    "@babel/preset-typescript": "7.21.0",
     "@coral-xyz/anchor": "0.26.0",
     "@gorhom/bottom-sheet": "4.4.3",
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "4.9.0",
-    "@helium/data-credits-sdk": "^0.0.44",
+    "@helium/data-credits-sdk": "0.0.44",
     "@helium/distributor-oracle": "0.0.43",
     "@helium/helium-entity-manager-sdk": "0.0.43",
     "@helium/helium-react-hooks": "0.0.43",
@@ -80,7 +80,7 @@
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-token": "0.3.5",
-    "@solana/wallet-standard-features": "^1.0.0",
+    "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "1.64.0",
     "@tradle/react-native-http": "2.0.1",
     "@walletconnect/react-native-compat": "2.2.1",
@@ -173,7 +173,7 @@
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
-    "react-native-webview": "^11.26.0",
+    "react-native-webview": "11.26.0",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
