--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
@@ -19,8 +19,7 @@
     "bump-major": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type major",
     "prettier": "prettier --write *.ts*",
     "gen-types": "graphql-codegen --config codegen.yml",
-    "gen-types:ios": "rover graph introspect https://wallet-api.helium.com/api/graphiql > ios/schema.gql && ios/Pods/Apollo/scripts/run-bundled-codegen.sh codegen:generate --target=swift --includes='./**/WidgetData.graphql' --localSchemaFile='ios/schema.gql' ios/HeliumWalletWidget/API/API.swift && npx swiftformat --swiftversion 4 .",
-    "gen-types:all": "yarn gen-types && yarn gen-types:ios",
+    "gen-types:all": "yarn gen-types",
     "prepare": "husky install"
   },
   "husky": {
