Fix deep links failing when on solana L1.

--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
     "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
-    "@react-navigation/native": "6.0.11",
+    "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "6.7.0",
-    "@react-navigation/stack": "6.2.2",
+    "@react-navigation/stack": "6.3.16",
     "@reduxjs/toolkit": "1.9.1",
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
@@ -187,7 +187,7 @@
     "timers-browserify": "1.4.2",
     "tinycolor2": "1.4.2",
     "tty-browserify": "0.0.0",
-    "tweetnacl": "^1.0.3",
+    "tweetnacl": "1.0.3",
     "url": "0.10.3",
     "use-debounce": "7.0.1",
     "vm-browserify": "0.0.4"
