--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency": "4.9.0",
+    "@helium/currency": "4.11.1",
     "@helium/data-credits-sdk": "0.0.50",
     "@helium/distributor-oracle": "0.0.50",
     "@helium/helium-entity-manager-sdk": "0.0.50",
@@ -187,7 +187,7 @@
     "timers-browserify": "1.4.2",
     "tinycolor2": "1.4.2",
     "tty-browserify": "0.0.0",
-    "tweetnacl": "^1.0.3",
+    "tweetnacl": "1.0.3",
     "url": "0.10.3",
     "use-debounce": "7.0.1",
     "vm-browserify": "0.0.4"
