--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "react-native-webview": "11.26.0",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
+    "redux-logger": "^3.0.6",
     "redux-persist": "6.0.0",
     "rn-swipe-button": "1.3.7",
     "rxjs": "7.5.6",
@@ -214,6 +215,7 @@
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
     "@types/react-test-renderer": "17.0.2",
+    "@types/redux-logger": "^3.0.9",
     "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "4.33.0",
