Only show approved helium NFTs and minor collectables UI fixes

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@helium/currency": "4.11.1",
     "@helium/data-credits-sdk": "0.1.2",
     "@helium/distributor-oracle": "0.1.2",
+    "@helium/fanout-sdk": "^0.1.2",
     "@helium/helium-entity-manager-sdk": "0.1.2",
     "@helium/helium-react-hooks": "0.1.2",
     "@helium/helium-sub-daos-sdk": "0.1.2",
@@ -58,6 +59,7 @@
     "@helium/spl-utils": "0.1.2",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
+    "@helium/voter-stake-registry-sdk": "^0.1.2",
     "@helium/wallet-link": "4.10.0",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
