--- a/package.json
+++ b/package.json
@@ -221,6 +221,7 @@
     "apollo": "2.34.0",
     "babel-jest": "26.6.3",
     "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "14.0.2",
