--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,8 +30,7 @@
     "node_modules",
     "babel.config.js",
     "metro.config.js",
-    "jest.config.js",
-    "src/graphql/__generated__/*.ts"
+    "jest.config.js"
   ],
   "extends": "expo/tsconfig.base"
 }
