--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "4.11.1",
+    "@helium/currency-utils": "0.1.1",
     "@helium/data-credits-sdk": "0.1.2",
     "@helium/distributor-oracle": "0.1.2",
     "@helium/fanout-sdk": "^0.1.2",
@@ -64,6 +65,7 @@
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
     "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
+    "@pythnetwork/client": "^2.17.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.12",
