--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@helium/currency-utils": "0.1.1",
     "@helium/data-credits-sdk": "0.1.2",
     "@helium/distributor-oracle": "0.1.2",
-    "@helium/fanout-sdk": "^0.1.2",
+    "@helium/fanout-sdk": "0.1.2",
     "@helium/helium-entity-manager-sdk": "0.1.2",
     "@helium/helium-react-hooks": "0.1.2",
     "@helium/helium-sub-daos-sdk": "0.1.2",
@@ -58,20 +58,20 @@
     "@helium/spl-utils": "0.1.2",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
-    "@helium/voter-stake-registry-sdk": "^0.1.2",
+    "@helium/voter-stake-registry-sdk": "0.1.2",
     "@helium/wallet-link": "4.10.0",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
     "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
+    "@react-native-async-storage/async-storage": "1.18.1",
     "@pythnetwork/client": "^2.17.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "4.3.0",
-    "@react-native-community/checkbox": "0.5.12",
+    "@react-native-community/checkbox": "0.5.15",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
-    "@react-native-community/netinfo": "9.3.5",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
     "@react-navigation/native": "6.0.11",
@@ -89,7 +89,6 @@
     "@walletconnect/types": "2.2.1",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
-    "asyncstorage-down": "4.2.0",
     "axios": "1.3.2",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
@@ -107,17 +106,17 @@
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
     "events": "3.3.0",
-    "expo": "47.0.6",
-    "expo-asset": "8.6.2",
-    "expo-barcode-scanner": "12.0.0",
-    "expo-camera": "13.0.0",
-    "expo-constants": "14.0.2",
-    "expo-haptics": "12.0.1",
-    "expo-linking": "3.2.3",
-    "expo-local-authentication": "13.0.2",
-    "expo-permissions": "14.0.0",
-    "expo-secure-store": "12.0.0",
-    "expo-splash-screen": "0.17.5",
+    "expo": "48.0.15",
+    "expo-asset": "8.9.1",
+    "expo-barcode-scanner": "12.3.2",
+    "expo-camera": "13.2.1",
+    "expo-constants": "14.2.1",
+    "expo-haptics": "12.2.1",
+    "expo-linking": "4.0.1",
+    "expo-local-authentication": "13.3.0",
+    "expo-permissions": "14.1.1",
+    "expo-secure-store": "12.1.1",
+    "expo-splash-screen": "0.18.2",
     "fuse.js": "6.6.2",
     "h3-js": "3.7.2",
     "https-browserify": "0.0.1",
@@ -131,10 +130,10 @@
     "qs": "6.11.0",
     "query-string": "7.1.1",
     "querystring-es3": "0.2.1",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-async-hook": "4.0.0",
     "react-i18next": "11.18.4",
-    "react-native": "0.70.5",
+    "react-native": "0.71.5",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "2.0.3",
     "react-native-charts-wrapper": "0.5.10",
@@ -143,7 +142,7 @@
     "react-native-currency-format": "1.0.19",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.8.0",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -155,24 +154,24 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "4.4.1",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "6.0.1",
+    "react-native-pager-view": "6.1.2",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "2.14.4",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "3.18.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "3.20.0",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.23",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-sodium": "0.4.0",
-    "react-native-svg": "13.6.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
-    "react-native-video": "5.2.0",
-    "react-native-webview": "11.26.0",
+    "react-native-video": "5.2.1",
+    "react-native-webview": "12.0.2",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -193,9 +192,11 @@
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.19.3",
-    "@babel/runtime": "7.18.9",
+    "@babel/core": "7.20.12",
+    "@babel/preset-env": "7.20.2",
+    "@babel/runtime": "7.20.13",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
+    "@tsconfig/react-native": "2.0.2",
     "@types/bn.js": "5.1.1",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
@@ -210,11 +211,11 @@
     "@types/react-test-renderer": "17.0.2",
     "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "babel-jest": "26.6.3",
     "babel-plugin-module-resolver": "4.1.0",
-    "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-plugin-transform-remove-console": "6.9.4",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "14.0.2",
@@ -226,7 +227,7 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "7.0.4",
-    "jest": "26.6.3",
+    "jest": "29.2.1",
     "jetifier": "1.6.8",
     "lint-staged": "11.2.6",
     "metro-react-native-babel-preset": "0.66.2",
@@ -238,7 +239,7 @@
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
-    "typescript": "4.6.3"
+    "typescript": "4.9.4"
   },
   "resolutions": {
     "@types/react": "17"
