--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
     "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
-    "@react-native-async-storage/async-storage": "1.18.1",
     "@pythnetwork/client": "^2.17.0",
+    "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.15",
     "@react-native-community/clipboard": "1.5.1",
@@ -150,6 +150,7 @@
     "react-native-level-fs": "3.0.1",
     "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "2.2.3",
+    "react-native-mail": "^6.1.1",
     "react-native-navigation-bar-color": "2.0.1",
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "4.4.1",
@@ -168,6 +169,7 @@
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
+    "react-native-test-flight": "^1.1.0",
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.1",
