--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,16 @@
-GRAPH_URI=http://localhost:4000/graphiql
+GRAPH_URI=
+ONE_SIGNAL_APP_ID=
+ONE_SIGNAL_ACCOUNT_TAG_SALT=
+WALLET_CONNECT_PROJECT_ID=
+WALLET_CONNECT_METADATA_URL=
+MAINNET_RPC_URL=
+DEVNET_RPC_URL=
+SOLANA_PREVIEW=
+WALLET_REST_URI=
+ONBOARDING_SERVER_URL=
+ONBOARDING_SERVER_AUTH=
+MIGRATION_SERVER_URL=
+RPC_SESSION_KEY_FALLBACK=
+HNT_TO_RENT_SERVICE_URL=
+HNT_TO_RENT_SERVICE_DEVNET_URL=
+MAPBOX_ACCESS_TOKEN=
