--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
     "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
-    "@react-native-async-storage/async-storage": "1.18.1",
     "@pythnetwork/client": "^2.17.0",
+    "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.15",
     "@react-native-community/clipboard": "1.5.1",
@@ -78,12 +78,16 @@
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.9.1",
+    "@rnmapbox/maps": "^10.0.7-rc.0",
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-token": "0.3.6",
     "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "1.64.0",
     "@tradle/react-native-http": "2.0.1",
+    "@turf/bbox": "^6.5.0",
+    "@turf/center": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
     "@walletconnect/react-native-compat": "2.2.1",
     "@walletconnect/sign-client": "2.2.1",
     "@walletconnect/types": "2.2.1",
@@ -118,7 +122,7 @@
     "expo-secure-store": "12.1.1",
     "expo-splash-screen": "0.18.2",
     "fuse.js": "6.6.2",
-    "h3-js": "3.7.2",
+    "h3-js": "^4.1.0",
     "https-browserify": "0.0.1",
     "i18next": "21.9.1",
     "lodash": "4.17.21",
