--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,5 @@ RPC_SESSION_KEY_FALLBACK=
 HNT_TO_RENT_SERVICE_URL=
 HNT_TO_RENT_SERVICE_DEVNET_URL=
 MAPBOX_ACCESS_TOKEN=
+MAPBOX_STYLE_URL=
+MAPBOX_DOWNLOAD_TOKEN=
