--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,5 +39,18 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = 'mapbox'
+                // Use the secret token you stored in gradle.properties as the password
+                password = System.getenv("MAPBOX_DOWNLOAD_TOKEN")
+            }
+        }
     }
 }
