--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@helium/currency": "4.11.1",
     "@helium/currency-utils": "0.1.1",
     "@helium/data-credits-sdk": "0.1.2",
-    "@helium/distributor-oracle": "0.1.2",
+    "@helium/distributor-oracle": "^0.2.4",
     "@helium/fanout-sdk": "0.1.2",
     "@helium/helium-entity-manager-sdk": "0.1.2",
     "@helium/helium-react-hooks": "0.1.2",
