--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@helium/helium-sub-daos-sdk": "0.1.2",
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.2.5",
-    "@helium/lazy-distributor-sdk": "0.1.2",
+    "@helium/lazy-distributor-sdk": "^0.2.5",
     "@helium/onboarding": "4.9.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
