--- a/package.json
+++ b/package.json
@@ -46,18 +46,18 @@
     "@helium/currency": "4.11.1",
     "@helium/currency-utils": "0.1.1",
     "@helium/data-credits-sdk": "0.2.14",
-    "@helium/distributor-oracle": "^0.2.14",
+    "@helium/distributor-oracle": "file:.yalc/@helium/distributor-oracle",
     "@helium/fanout-sdk": "0.1.2",
-    "@helium/helium-entity-manager-sdk": "^0.2.14",
-    "@helium/helium-react-hooks": "0.2.14",
+    "@helium/helium-entity-manager-sdk": "file:.yalc/@helium/helium-entity-manager-sdk",
+    "@helium/helium-react-hooks": "file:.yalc/@helium/helium-react-hooks",
     "@helium/helium-sub-daos-sdk": "0.2.14",
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.2.5",
-    "@helium/lazy-distributor-sdk": "0.1.2",
+    "@helium/lazy-distributor-sdk": "file:.yalc/@helium/lazy-distributor-sdk",
     "@helium/onboarding": "4.9.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "^0.2.6",
+    "@helium/spl-utils": "file:.yalc/@helium/spl-utils",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
     "@helium/voter-stake-registry-sdk": "0.1.2",
@@ -84,6 +84,7 @@
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-token": "0.3.6",
+    "@solana/wallet-adapter-react": "^0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "1.64.0",
     "@tradle/react-native-http": "2.0.1",
