Things somewhat working

--- a/package.json
+++ b/package.json
@@ -39,25 +39,26 @@
     "@coral-xyz/anchor": "0.26.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.2.14",
-    "@helium/account-fetch-cache-hooks": "^0.2.14",
+    "@helium/account-fetch-cache": "^0.2.16",
+    "@helium/account-fetch-cache-hooks": "^0.2.16",
     "@helium/address": "4.6.2",
+    "@helium/circuit-breaker-sdk": "^0.2.16",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "4.11.1",
     "@helium/currency-utils": "0.1.1",
-    "@helium/data-credits-sdk": "0.2.14",
-    "@helium/distributor-oracle": "file:.yalc/@helium/distributor-oracle",
-    "@helium/fanout-sdk": "0.1.2",
-    "@helium/helium-entity-manager-sdk": "file:.yalc/@helium/helium-entity-manager-sdk",
-    "@helium/helium-react-hooks": "file:.yalc/@helium/helium-react-hooks",
-    "@helium/helium-sub-daos-sdk": "0.2.14",
+    "@helium/data-credits-sdk": "0.2.16",
+    "@helium/distributor-oracle": "^0.2.16",
+    "@helium/fanout-sdk": "^0.2.16",
+    "@helium/helium-entity-manager-sdk": "^0.2.16",
+    "@helium/helium-react-hooks": "^0.2.16",
+    "@helium/helium-sub-daos-sdk": "0.2.16",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.2.5",
-    "@helium/lazy-distributor-sdk": "file:.yalc/@helium/lazy-distributor-sdk",
+    "@helium/idls": "^0.2.16",
+    "@helium/lazy-distributor-sdk": "^0.2.16",
     "@helium/onboarding": "4.9.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "file:.yalc/@helium/spl-utils",
+    "@helium/spl-utils": "^0.2.16",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
     "@helium/voter-stake-registry-sdk": "0.1.2",
