integrate alldomains to helium wallet: * add TldParser to retrieve domain owner * add debounce to avoid unneccessary rpc calls * add alias/nickname as the domain when applicable

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
     "@metaplex-foundation/js": "0.17.6",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
+    "@onsol/tldparser": "^0.5.3",
     "@pythnetwork/client": "^2.17.0",
     "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.3.0",
@@ -289,29 +290,29 @@
     "tls": false
   },
   "browser": {
-    "zlib": "browserify-zlib",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_writable": "readable-stream/writable",
     "console": "console-browserify",
     "constants": "constants-browserify",
     "crypto": "react-native-crypto",
+    "dgram": "react-native-udp",
     "dns": "dns.js",
-    "net": "react-native-tcp",
     "domain": "domain-browser",
+    "fs": "react-native-level-fs",
     "http": "@tradle/react-native-http",
     "https": "https-browserify",
+    "net": "react-native-tcp",
     "os": "react-native-os",
     "path": "path-browserify",
     "querystring": "querystring-es3",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "dgram": "react-native-udp",
     "stream": "stream-browserify",
     "timers": "timers-browserify",
+    "tls": false,
     "tty": "tty-browserify",
     "vm": "vm-browserify",
-    "tls": false
+    "zlib": "browserify-zlib"
   }
 }
