--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.2.17",
     "@helium/lazy-distributor-sdk": "^0.2.17",
-    "@helium/onboarding": "4.9.0",
+    "@helium/onboarding": "file:.yalc/@helium/onboarding",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
     "@helium/spl-utils": "^0.2.17",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
     "@helium/voter-stake-registry-sdk": "0.1.2",
-    "@helium/wallet-link": "4.10.0",
+    "@helium/wallet-link": "^4.10.2",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
@@ -99,6 +99,7 @@
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
     "axios": "1.3.2",
+    "axios-mock-adapter": "^1.21.5",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.1",
