--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.9.1",
-    "@rnmapbox/maps": "^10.0.7-rc.0",
+    "@rnmapbox/maps": "10.0.15",
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-memo": "^0.2.3",
@@ -162,7 +162,7 @@
     "react-native-mail": "^6.1.1",
     "react-native-navigation-bar-color": "2.0.1",
     "react-native-network-info": "5.2.1",
-    "react-native-onesignal": "4.4.1",
+    "react-native-onesignal": "5.0.0",
     "react-native-os": "1.2.6",
     "react-native-pager-view": "6.2.0",
     "react-native-qrcode-svg": "6.1.2",
