--- a/package.json
+++ b/package.json
@@ -40,32 +40,33 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.4.3",
-    "@helium/account-fetch-cache-hooks": "^0.4.3",
+    "@helium/account-fetch-cache": "^0.4.5",
+    "@helium/account-fetch-cache-hooks": "^0.4.5",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.4.3",
+    "@helium/circuit-breaker-sdk": "^0.4.5",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "^0.4.3",
-    "@helium/data-credits-sdk": "^0.4.3",
-    "@helium/distributor-oracle": "^0.4.3",
-    "@helium/fanout-sdk": "^0.4.3",
-    "@helium/helium-entity-manager-sdk": "^0.4.3",
-    "@helium/helium-react-hooks": "^0.4.3",
-    "@helium/helium-sub-daos-sdk": "^0.4.3",
+    "@helium/currency-utils": "^0.4.5",
+    "@helium/data-credits-sdk": "^0.4.5",
+    "@helium/distributor-oracle": "^0.4.5",
+    "@helium/fanout-sdk": "^0.4.5",
+    "@helium/helium-entity-manager-sdk": "^0.4.5",
+    "@helium/helium-react-hooks": "^0.4.5",
+    "@helium/helium-sub-daos-sdk": "^0.4.5",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.4.3",
-    "@helium/lazy-distributor-sdk": "^0.4.3",
-    "@helium/modular-governance-hooks": "^0.0.5",
+    "@helium/idls": "^0.4.5",
+    "@helium/lazy-distributor-sdk": "^0.4.5",
+    "@helium/modular-governance-hooks": "^0.0.6",
+    "@helium/modular-governance-idls": "^0.0.6",
     "@helium/onboarding": "4.9.0",
-    "@helium/organization-sdk": "^0.0.5",
+    "@helium/organization-sdk": "^0.0.6",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "^3.0.0",
-    "@helium/spl-utils": "^0.4.3",
-    "@helium/state-controller-sdk": "^0.0.5",
+    "@helium/spl-utils": "^0.4.5",
+    "@helium/state-controller-sdk": "^0.0.6",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "^0.4.3",
-    "@helium/voter-stake-registry-hooks": "^0.4.3",
-    "@helium/voter-stake-registry-sdk": "^0.4.3",
+    "@helium/treasury-management-sdk": "^0.4.5",
+    "@helium/voter-stake-registry-hooks": "^0.4.5",
+    "@helium/voter-stake-registry-sdk": "^0.4.5",
     "@helium/wallet-link": "4.10.0",
     "@jup-ag/api": "^6.0.6",
     "@ledgerhq/hw-app-solana": "7.0.13",
@@ -141,6 +142,7 @@
     "lodash": "4.17.21",
     "long": "5.2.0",
     "lottie-react-native": "^6.3.1",
+    "markdown-it": "^13.0.2",
     "parse5": "6.0.1",
     "patch-package": "6.4.7",
     "path-browserify": "0.0.0",
@@ -222,6 +224,7 @@
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
     "@types/lodash": "4.14.183",
+    "@types/markdown-it": "^13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
     "@types/react-native": "0.70.6",
