--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@ledgerhq/react-native-hid": "6.30.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.5",
     "@ledgerhq/types-devices": "^6.22.4",
-    "@metaplex-foundation/js": "0.17.6",
+    "@metaplex-foundation/js": "^0.19.4",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@onsol/tldparser": "^0.5.3",
     "@pythnetwork/client": "2.17.0",
@@ -95,9 +95,9 @@
     "@solana/spl-memo": "0.2.3",
     "@solana/spl-token": "0.3.6",
     "@solana/spl-token-registry": "0.2.4574",
-    "@solana/wallet-adapter-react": "0.15.33",
+    "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/wallet-standard-features": "1.0.0",
-    "@solana/web3.js": "1.67.2",
+    "@solana/web3.js": "^1.78.4",
     "@tradle/react-native-http": "2.0.1",
     "@turf/bbox": "6.5.0",
     "@turf/center": "6.5.0",
@@ -151,7 +151,7 @@
     "query-string": "7.1.1",
     "querystring-es3": "0.2.1",
     "react": "18.2.0",
-    "react-async-hook": "4.0.0",
+    "react-async-hook": "^4.0.0",
     "react-i18next": "11.18.4",
     "react-native": "0.71.5",
     "react-native-appstate-hook": "1.0.6",
@@ -193,6 +193,7 @@
     "react-native-test-flight": "1.1.0",
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-video": "5.2.1",
     "react-native-webview": "12.0.2",
     "react-redux": "8.0.4",
