revert yalc packages

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@helium/distributor-oracle": "^0.6.0",
     "@helium/fanout-sdk": "^0.6.0",
     "@helium/helium-entity-manager-sdk": "^0.6.0",
-    "@helium/helium-react-hooks": "file:.yalc/@helium/helium-react-hooks",
+    "@helium/helium-react-hooks": "^0.6.0",
     "@helium/helium-sub-daos-sdk": "^0.6.0",
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.6.0",
@@ -65,7 +65,7 @@
     "@helium/state-controller-sdk": "^0.0.8",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "^0.6.0",
-    "@helium/voter-stake-registry-hooks": "file:.yalc/@helium/voter-stake-registry-hooks",
+    "@helium/voter-stake-registry-hooks": "^0.6.0",
     "@helium/voter-stake-registry-sdk": "^0.6.0",
     "@helium/wallet-link": "4.10.0",
     "@jup-ag/api": "^6.0.6",
