--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.4.0",
     "@helium/lazy-distributor-sdk": "^0.4.0",
-    "@helium/onboarding": "4.9.0",
+    "@helium/onboarding": "^4.10.3",
     "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "^3.0.0",
+    "@helium/react-native-sdk": "file:.yalc/@helium/react-native-sdk",
     "@helium/spl-utils": "^0.4.0",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "^0.4.0",
